--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "4         1           0        0             0      No  "
       ]
      },
-     "execution_count": 92,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
        "4         0             0   No  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
        "Name: show, dtype: float64"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
        "4         0             0     1  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
        "Name: Gender, dtype: int64"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +949,7 @@
        "[110527 rows x 11 columns]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1089,7 +1089,7 @@
        "4         1           0         0             0     1  "
       ]
      },
-     "execution_count": 105,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1254,7 @@
        "4           0         0             0     1              1  "
       ]
      },
-     "execution_count": 107,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1278,7 @@
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1289,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -109164,7 +109164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -109292,7 +109292,7 @@
        "4           0         0             0     1              1  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109311,7 +109311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109320,7 +109320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109329,7 +109329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -109346,7 +109346,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109365,7 +109365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -109481,7 +109481,7 @@
        "4             0     1              1  "
       ]
      },
-     "execution_count": 125,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109493,140 +109493,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Scholarship</th>\n",
-       "      <th>Hypertension</th>\n",
-       "      <th>Diabetes</th>\n",
-       "      <th>Alcoholism</th>\n",
-       "      <th>Handicap</th>\n",
-       "      <th>SMS_received</th>\n",
-       "      <th>show</th>\n",
-       "      <th>Gender_Female</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>62</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>56</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>62</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>56</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   0  Age  Scholarship  Hypertension  Diabetes  Alcoholism  Handicap  \\\n",
-       "0  0   62            0             1         0           0         0   \n",
-       "1  0   56            0             0         0           0         0   \n",
-       "2  0   62            0             0         0           0         0   \n",
-       "3  0    8            0             0         0           0         0   \n",
-       "4  0   56            0             1         1           0         0   \n",
-       "\n",
-       "   SMS_received  show  Gender_Female  \n",
-       "0             0     1              1  \n",
-       "1             0     1              0  \n",
-       "2             0     1              1  \n",
-       "3             0     1              1  \n",
-       "4             0     1              1  "
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.concat([diff, df], axis=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -109748,7 +109624,7 @@
        "110526         0             1     1              1  "
       ]
      },
-     "execution_count": 130,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109760,7 +109636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -109782,7 +109658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109793,7 +109669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -109915,7 +109791,7 @@
        "4         0             0     1              1  "
       ]
      },
-     "execution_count": 177,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109934,7 +109810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -109957,7 +109833,7 @@
       " 8   show           106980 non-null  int64  \n",
       " 9   Gender_Female  106980 non-null  uint8  \n",
       "dtypes: float64(2), int64(7), uint8(1)\n",
-      "memory usage: 12.3 MB\n"
+      "memory usage: 8.3 MB\n"
      ]
     }
    ],
@@ -109967,7 +109843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -110061,7 +109937,7 @@
        "[106980 rows x 1 columns]"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110072,7 +109948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -110287,7 +110163,7 @@
        "[106980 rows x 10 columns]"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110299,12 +110175,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"Data_processed.csv\")"
+    "md.to_csv(\"Data_processed.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
